--- a/sass/_navmobil.scss
+++ b/sass/_navmobil.scss
@@ -1,7 +1,16 @@
+$teal : #20c997;
+
 .hamburguesa {
     visibility: visible; 
+    .a{
+        text-decoration: none;
+    }
 }
-    
+
+.color {
+    background-color: $teal;
+}
+
 .navescritorio {
     display: none;
 }
