--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -7,14 +7,14 @@ nav {
     position: sticky; 
     li {
         display: inline-block;
-        padding: 10px;
+        padding: 20px;
         padding-right: 30px;
     
     }
     a {
         text-decoration: none;
         color: white;
-        font-size: 2vw;
+        font-size: 15px;
     
     }
     ul {
