--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,5 @@
-@media (min-width: 0px) and (max-width: 400px) {
+/*MOBIL*/
+@media (min-width: 0px) and (max-width: 550px) {
   body {
     background-color: #d2ffec;
   }
@@ -135,10 +136,7 @@
   }
   /*FORM*/
   .contenedor .form {
-    width: 50%;
-    max-width: 500px;
     margin: auto;
-    padding: 5px 35px;
     margin-top: 20px;
     padding-bottom: 30px;
     border-radius: 10px;
@@ -147,7 +145,7 @@
     font-family: "Quicksand", sans-serif;
     font-weight: normal;
     text-align: center;
-    padding: 5px 0;
+    font-size: 10vw;
   }
   .contenedor .form .form-header .form-title span {
     color: #ffffff;
@@ -155,7 +153,7 @@
   .contenedor .form .form-control-label {
     display: block;
     color: rgb(10, 4, 4);
-    font-size: 16px;
+    font-size: 4vw;
     position: relative;
   }
   .contenedor .form .form-input, .contenedor .form .form-textarea {
@@ -165,7 +163,7 @@
     border-bottom: 2px solid rgb(195, 247, 225);
     width: 100%;
     padding: 10px;
-    font-size: 12px;
+    font-size: 4vw;
     color: rgb(130, 151, 141);
   }
   .contenedor .form .form-input .form-textarea, .contenedor .form .form-textarea .form-textarea {
@@ -177,7 +175,7 @@
     width: 100%;
     outline: none;
     background: rgb(155, 202, 180);
-    font-size: 16px;
+    font-size: 4vw;
     border: none;
     color: rgb(215, 225, 225);
     padding: 15px 0;
@@ -210,10 +208,10 @@
 }
 /*----------------------------------------------------------------------------------------------------------------*/
 /*ESCRITORIO*/
-@media (min-width: 401px) and (max-width: 2000px) {
+@media (min-width: 551px) and (max-width: 2000px) {
   body {
     margin: 0px;
-    background-color: rgb(161, 185, 181);
+    background-color: #a1b9b5;
   }
   * {
     max-width: 100%;
@@ -368,7 +366,7 @@
   }
   /*FORM*/
   .contenedor .form {
-    width: 50%;
+    width: 100%;
     max-width: 500px;
     margin: auto;
     padding: 5px 35px;
