--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,7 @@
+/*MOBIL*/
 
-@media (min-width: 0px) and (max-width: 400px) {
+
+@media (min-width: 0px) and (max-width: 550px) {
 
     body {
         background-color: #d2ffec;
@@ -80,7 +82,7 @@
     
     /*FORM*/
     
-    @import "formulario";
+    @import "formulariomobil";
     
     /*GALERIA*/
     
@@ -108,15 +110,8 @@
         text-align: center;
         font-size: 1c;
         }  
+
     }
-    
-    
-    
-    
-    
-    
-    
-    
     
     
     
@@ -128,24 +123,11 @@
     
     
     
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
     /*ESCRITORIO*/
     
     
     
-    
-@media (min-width: 401px) and (max-width: 2000px ) 
+@media (min-width: 551px) and (max-width: 2000px ) 
 {
 
 
