agrego scss de tablet

--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -1,6 +1,8 @@
 .bannerintegrantes, .bannerconcurso, .bannershinee, .bannergaleria {
     text-align: center; 
     position: sticky;
+    background: rgb(161,185,181);
+background: linear-gradient(180deg, rgba(161,185,181,1) 16%, rgba(161,185,181,0) 100%);
     h1{
         color: rgb(255, 255, 255);
         font-family: 'Gravitas One', cursive;  
