--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,11 +6,38 @@
   .navescritorio {
     display: none;
   }
+  .navescritorio {
+    display: none;
+  }
+  .hamburguesa {
+    visibility: visible;
+  }
+  .hamburguesa .menu {
+    font-size: 8vw;
+    color: white;
+  }
+  .hamburguesa nav {
+    font-family: "Quicksand", sans-serif;
+    color: white;
+    background-color: #92afa5;
+  }
+  .hamburguesa nav a {
+    text-decoration: none;
+    color: white;
+    font-size: 6vw;
+  }
+  .hamburguesa .bg-teal, .hamburguesa .p-4 {
+    background-color: #92afa5;
+  }
+  .hamburguesa .navbar-toggler-icon, .hamburguesa .container-fluid {
+    background-color: #92afa5;
+  }
   p {
     font-size: 4vw;
   }
   h2 {
     font-family: "Gravitas One", cursive;
+    font-size: 8vw;
   }
   .bannerintegrantes, .bannerconcurso, .bannershinee, .bannergaleria {
     text-align: center;
@@ -23,7 +50,7 @@
     font-size: 10vw;
   }
   .bannerintegrantes img, .bannerconcurso img, .bannershinee img, .bannergaleria img {
-    max-width: 94vw;
+    max-width: 100%;
     position: -webkit-sticky;
     position: sticky;
   }
@@ -51,6 +78,9 @@
     max-width: 94vw;
     position: -webkit-sticky;
     position: sticky;
+  }
+  .banner img {
+    max-width: 100%;
   }
   .imgfondo img {
     filter: brightness(0.6);
@@ -145,7 +175,7 @@
     font-family: "Quicksand", sans-serif;
     font-weight: normal;
     text-align: center;
-    font-size: 10vw;
+    font-size: 7vw;
   }
   .contenedor .form .form-header .form-title span {
     color: #ffffff;
@@ -195,7 +225,7 @@
   }
   /*FOOTER*/
   footer {
-    background-color: #389681;
+    background-color: #92afa5;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color: whitesmoke;
     line-height: 50px;
@@ -207,8 +237,251 @@
   }
 }
 /*----------------------------------------------------------------------------------------------------------------*/
+/*TABLET*/
+@media (min-width: 551px) and (max-width: 1020px) {
+  body {
+    margin: 0px;
+    background-color: #a1b9b5;
+  }
+  * {
+    max-width: 100%;
+  }
+  header {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+  }
+  html {
+    font-size: 10px;
+  }
+  h2 {
+    font-family: "Gravitas One", cursive;
+  }
+  p {
+    font-size: 18px;
+  }
+  .navescritorio {
+    display: none;
+  }
+  .hamburguesa {
+    visibility: visible;
+  }
+  .hamburguesa .menu {
+    font-size: 30px;
+    color: white;
+  }
+  .hamburguesa nav {
+    font-family: "Quicksand", sans-serif;
+    color: white;
+  }
+  .hamburguesa nav a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+  }
+  .hamburguesa .bg-teal, .hamburguesa .p-4 {
+    background-color: #92afa5;
+  }
+  .hamburguesa .navbar-toggler-icon, .hamburguesa .container-fluid {
+    background-color: #92afa5;
+  }
+  .bannerintegrantes, .bannerconcurso, .bannershinee, .bannergaleria {
+    text-align: center;
+    position: -webkit-sticky;
+    position: sticky;
+    background: rgb(161, 185, 181);
+    background: linear-gradient(180deg, rgb(161, 185, 181) 16%, rgba(161, 185, 181, 0) 100%);
+  }
+  .bannerintegrantes h1, .bannerconcurso h1, .bannershinee h1, .bannergaleria h1 {
+    color: rgb(255, 255, 255);
+    font-family: "Gravitas One", cursive;
+    font-size: 10vw;
+  }
+  .banner {
+    display: grid;
+    grid-template-areas: "imgfondo mainindex";
+  }
+  .banner h1 {
+    float: right;
+    font-size: 7vw;
+    margin: 30px;
+    text-align: right;
+    font-family: "Advent Pro", sans-serif;
+    color: rgb(255, 255, 255);
+  }
+  .banner img {
+    max-width: 100%;
+  }
+  .imgfondo img {
+    filter: brightness(0.6);
+  }
+  .mainindex {
+    grid-area: mainindex;
+  }
+  .mainindex h2 {
+    font-size: 5vw;
+    font-family: "Gravitas One", cursive;
+    margin: 10px;
+  }
+  main {
+    font-size: 2vw;
+    font-family: "Quicksand", sans-serif;
+    margin: 0px;
+    padding: 20px;
+    text-align: justify;
+    background-color: #ffffff;
+    grid-area: main;
+  }
+  .video {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+  }
+  .iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+  #shineeworld {
+    font-size: 11vw;
+    font-family: "Gravitas One", cursive;
+    color: rgb(255, 255, 255);
+  }
+  .contenedor {
+    height: 100%;
+    width: 100%;
+  }
+  /* INTEGRANTES */
+  .h1integrantes {
+    margin-top: 0px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  /*SHINEE*/
+  .h1infoshinee {
+    margin-top: 0px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Gravitas One", cursive;
+    color: #ffffff;
+  }
+  /*CONCURSO*/
+  .h1concurso {
+    margin-top: 0px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .infocontacto {
+    font-size: 20px;
+    font-family: "Quicksand", sans-serif;
+    margin: 0px;
+    padding: 50px;
+    margin-bottom: 30px;
+    text-align: justify;
+    background-color: #ffffff;
+  }
+  .infocontacto h2 {
+    font-size: 40px;
+    font-family: "Gravitas One", cursive;
+    text-align: center;
+  }
+  /*FORM*/
+  .contenedor .form {
+    margin: auto;
+    margin-top: 20px;
+    padding-bottom: 30px;
+    border-radius: 10px;
+  }
+  .contenedor .form .form-header .form-title {
+    font-family: "Quicksand", sans-serif;
+    font-weight: normal;
+    text-align: center;
+    font-size: 7vw;
+  }
+  .contenedor .form .form-header .form-title span {
+    color: #ffffff;
+  }
+  .contenedor .form .form-control-label {
+    display: block;
+    color: rgb(10, 4, 4);
+    font-size: 4vw;
+    position: relative;
+  }
+  .contenedor .form .form-input, .contenedor .form .form-textarea {
+    background: rgba(255, 255, 255, 0.572);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid rgb(195, 247, 225);
+    width: 100%;
+    padding: 10px;
+    font-size: 4vw;
+    color: rgb(130, 151, 141);
+  }
+  .contenedor .form .form-input .form-textarea, .contenedor .form .form-textarea .form-textarea {
+    resize: vertical;
+    max-height: 150px;
+    min-height: 50px;
+  }
+  .contenedor .form .btn-submit {
+    width: 100%;
+    outline: none;
+    background: rgb(155, 202, 180);
+    font-size: 4vw;
+    border: none;
+    color: rgb(215, 225, 225);
+    padding: 15px 0;
+    cursor: pointer;
+    transition: all 0.5s ease;
+  }
+  .contenedor .form:hover {
+    background: #ffffff;
+  }
+  /*GALERIA*/
+  .cajagaleria h1 {
+    margin-top: 0px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  /*BOTON*/
+  .boton {
+    position: fixed;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    bottom: 30px;
+    background: #d2ffec;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+    margin-left: 20px;
+  }
+  /*FOOTER*/
+  footer {
+    background-color: #92afa5;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: whitesmoke;
+    line-height: 50px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+  }
+}
+/*----------------------------------------------------------------------------------------------------------------*/
 /*ESCRITORIO*/
-@media (min-width: 551px) and (max-width: 2000px) {
+@media (min-width: 1021px) and (max-width: 2000px) {
   body {
     margin: 0px;
     background-color: #a1b9b5;
@@ -259,6 +532,8 @@
     text-align: center;
     position: -webkit-sticky;
     position: sticky;
+    background: rgb(161, 185, 181);
+    background: linear-gradient(180deg, rgb(161, 185, 181) 16%, rgba(161, 185, 181, 0) 100%);
   }
   .bannerintegrantes h1, .bannerconcurso h1, .bannershinee h1, .bannergaleria h1 {
     color: rgb(255, 255, 255);
@@ -441,7 +716,7 @@
   }
   /*FOOTER*/
   footer {
-    background-color: #389681;
+    background-color: #92afa5;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color: whitesmoke;
     line-height: 50px;
