--- a/sass/_bannermobil.scss
+++ b/sass/_bannermobil.scss
@@ -1,14 +1,16 @@
 .bannerintegrantes, .bannerconcurso, .bannershinee, .bannergaleria { 
     text-align: center;
     position: sticky;
+
     h1{
         color: rgb(255, 255, 255);
         font-family: 'Gravitas One', cursive; 
         font-size: 10vw;
     }    
     img{
-        max-width: 94vw;
+        max-width: 100%;
         position: sticky;
+
         }
     }
     .banner{   
