--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 /*MOBIL*/
 
 
-@media (min-width: 0px) and (max-width: 550px) {
+@media (min-width: 0px) and (max-width: 550px){
 
     body {
         background-color: #d2ffec;
@@ -12,12 +12,14 @@
 }
     
     
+@import "navmobil";
     p {
         font-size: 4vw;
     }
     
     h2 {
         font-family: 'Gravitas One', cursive;
+        font-size: 8vw;
     }
     
 @import "bannermobil";
@@ -100,7 +102,7 @@
     /*FOOTER*/
     
     footer {
-        background-color: #389681;                   
+        background-color: #92afa5;                   
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
         color: whitesmoke;
         line-height:50px;
@@ -113,10 +115,187 @@
 
     }
     
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    /*----------------------------------------------------------------------------------------------------------------*/
     
     
     
     
+    
+    /*TABLET*/
+        
+    
+    
+    
+    @media (min-width: 551px) and (max-width: 1020px){
+
+
+        @import "general";
+
+        
+        h2 {
+            font-family: 'Gravitas One', cursive;
+        }
+        
+        p {
+            font-size: 18px;
+        }
+        
+        @import "navtablet";
+        
+        @import "banner";
+        
+        @import "homemobil";
+            
+        
+            
+            /* INTEGRANTES */
+        
+                .h1integrantes {
+                margin-top: 0px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                }
+        
+            /*SHINEE*/
+            
+            
+            
+            .h1infoshinee {
+                margin-top: 0px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-family: 'Gravitas One', cursive;
+                color: #ffffff;
+                    }
+                
+            
+            /*CONCURSO*/
+            
+            .h1concurso {
+                margin-top: 0px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                }
+            
+            
+            .infocontacto {
+                font-size: 20px;
+                font-family: 'Quicksand', sans-serif;
+                margin: 0px;
+                padding: 50px;
+                margin-bottom: 30px;
+                text-align: justify;
+                background-color: #ffffff;
+            
+            }
+            
+            .infocontacto h2 {
+                font-size: 40px;
+                font-family: 'Gravitas One', cursive; 
+                text-align: center;
+            }
+            
+            
+            /*FORM*/
+    
+            @import "formulariomobil";
+    
+        
+        
+            
+            /*GALERIA*/
+            
+            
+            .cajagaleria h1 {
+                margin-top: 0px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                
+            }
+            
+            
+            
+            /*BOTON*/
+            
+            .boton {
+                position: fixed;
+                width: 55px;
+                height: 55px;
+                line-height: 55px;
+                bottom: 30px;
+                background: #d2ffec;
+                border-radius: 50px;
+                text-align: center;
+                box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+                margin-left: 20px;
+            }
+            
+            
+            
+            /*FOOTER*/
+            
+            footer {    
+                background-color: #92afa5;                   
+                font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                color: whitesmoke;
+                line-height:50px;
+                bottom:0;
+                left:0;
+                width:100%;
+                text-align: center;
+                font-size: 20px;
+            }
+            
+        
+            
+            
+            }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     /*----------------------------------------------------------------------------------------------------------------*/
     
     
@@ -127,7 +306,7 @@
     
     
     
-@media (min-width: 551px) and (max-width: 2000px ) 
+@media (min-width:1021px) and (max-width: 2000px ) 
 {
 
 
@@ -249,7 +428,7 @@ p {
     /*FOOTER*/
     
     footer {    
-        background-color: #389681;                   
+        background-color: #92afa5;                   
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
         color: whitesmoke;
         line-height:50px;
