--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -18,18 +18,14 @@ main {
         p{
             font-size: 17px;
         }
-        h2 {
-        font-size: 5vw;
-        font-family: 'Gravitas One', cursive; 
-        margin: 10px;
-    
+
+        }
     }
-}
-
-
-
-}
-
+        h2 {
+        font-size: 4vw;
+        font-family: 'Gravitas One', cursive; 
+        margin-top: 10px;
+        }
     
     .video {
         position: relative;
