--- a/sass/_bannermobil.scss
+++ b/sass/_bannermobil.scss
@@ -6,6 +6,13 @@
         color: rgb(255, 255, 255);
         font-family: 'Gravitas One', cursive; 
         font-size: 10vw;
+        margin-top: 0px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        color: #ffffff;
     }    
     img{
         max-width: 100%;
