--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,7 +1,7 @@
 nav {
     width: 100% ;
     height: 70px;
-    background: rgb(146,175,165);
+    color: $navcolor;
     text-align: right;
     font-family: 'Quicksand', sans-serif;
     position: sticky; 
@@ -14,7 +14,7 @@ nav {
     a {
         text-decoration: none;
         color: white;
-        font-size: 15px;
+        font-size: 25px;
     
     }
     ul {
