--- a/sass/_navmobil.scss
+++ b/sass/_navmobil.scss
@@ -1,6 +1,3 @@
-$teal : #92afa5;
-
-
 .navescritorio {
     display: none;
 }
@@ -15,7 +12,7 @@ $teal : #92afa5;
     nav {    
         font-family: 'Quicksand', sans-serif;
         color: white;
-        background-color: $teal;
+        background-color: $navcolor;
         a {
             text-decoration: none;
             color: white;
@@ -23,12 +20,12 @@ $teal : #92afa5;
         }
 }
 .bg-teal, .p-4 {
-    background-color: $teal;
+    background-color: $navcolor;
 }
 
 
 .navbar-toggler-icon, .container-fluid {
-    background-color: $teal;
+    background-color: $navcolor;
 }
 
 }
